# PiPiiTiii

./: .env.example  .gitignore  CLAUDE.md  README.md  debug_json.py  debug_log.txt  downloaded_test.pptx  pyproject.toml  pytest.ini  reconstructed_presentation.pptx  reproduce_connector.py  requirements.txt  start_dev.ps1  start_dev.sh  temp_slide_5.json  test_connector.pptx  test_download_headless.py
.claude/: settings.local.json
.claude/commands/: test.md
backend/: attachments_db.py  database.py  debug_reconstruction.py  llm_service.py  main.py  migrate_attachments.py  ppt_reconstructor.py  projects.db  verify_download.py
backend/attributes/: base.py  llm.py  manager.py  types.py
backend/ppt_parser/: __init__.py  constants.py  images.py  shapes.py  slides.py  styles.py  tables.py  utils.py
backend/utils/: __init__.py  file_resolver.py  llm_utils.py  shape_utils.py
frontend/: check_errors.txt  package-lock.json  package.json  vitest.config.ts
frontend/src/: app.css  setupTest.ts
scripts/: attr_stats.py  bulk_upload.py  bulk_uploads_local.py  check_routes.py  cleanup_database.py  cleanup_projects.py  cleanup_storage.py  consolidate_data.py  debug_fonts.py  debug_recon.py  extract_llm_columns.py  gen_genealogy.py  init_db.py  migrate-workflow-data.ts  migrate_attachments.py  recalculate_attributes.py  regenerate_thumbnails.py  swap_projects.py  test_cycle.py  test_export.py  test_framework.py  test_metadata.py  test_parsing.py  test_storage.py  upload_to_postgres.py  verify_duplicate_upload.py  verify_fix.py
tests/backend/: conftest.py
(+149 files in other folders)
