[project]
name = "pipiitiii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.122.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "pywin32>=311",
    "uvicorn>=0.38.0",
]
