[project]
name = "pipiitiii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-multipart>=0.0.20",
    "pywin32>=311",
    "requests>=2.32.5",
    "ruff>=0.14.14",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]
